Fix portal title alignment #879 @0.1

--- a/src/Esteren/PortalBundle/Resources/public/sass/theme.scss
+++ b/src/Esteren/PortalBundle/Resources/public/sass/theme.scss
@@ -62,3 +62,7 @@ form textarea {
         font-size: 13px;
     }
 }
+
+h2.portal_subtitle {
+    height: 45px;
+}
